...
    <string name="priority">Priority</string>
    <string name="order_by">Order By</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="date_created">Date created</string>
    <string name="date_modified">Date modified</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="show_completed_tasks">Show completed tasks</string>
    <string name="show_all_notes">Show notes from all folders</string>
    <string name="search_tasks">Search tasks</string>
    <string name="save_task">Save task</string>
...
